--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h3>I have a wife and she is hotter than you</h3>
 
   <div>
-    <img src="He_is_mine.png" alt="My Photo">
+    <img src="He_is_mine_1.png" alt="My Photo">
   </div>
 
   <h1>Do not scan me again, otherwise my wife will find you</h1>
